--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -2,13 +2,8 @@
 <resources>
     <string name="app_name">ProjectPiCars</string>
     <string name="action_about">À propos</string>
-    <string name="action_settings">Paramètres</string>
-    <string name="btn_add">Ajouter</string>
-    <string name="btn_del_description">Supprimer une connexion</string>
-    <string name="btn_go_description">Se connecter</string>
-    <string name="edit_text_ip">Entrez une adresse IP</string>
-    <string name="logo">Logo</string>
-    <string name="no_connections">Aucune connexion enregistrée</string>
-    <string name="btn_edit">Editer</string>
+    <string name="edit_text_ip">Adresse IP</string>
     <string name="action_save">Sauvegarder</string>
+    <string name="connect">Connection</string>
+    <string name="voltage_batterie">Voltage batterie</string>
 </resources>
