--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,28 +3,15 @@
     <string name="app_name">ProjectPiCars</string>
 
     <!--Splash-->
-    <string name="logo">Logo</string>
 
     <!--Activity Main-->
-    <string name="action_settings">Paramètres</string>
     <string name="action_about">À propos</string>
-    <string name="btn_add">Ajouter</string>
-    <string name="btn_del_description">Supprimer une connexion</string>
-    <string name="btn_go_description">Se connecter</string>
-    <string name="edit_text_ip">Entrez une adresse IP</string>
-    <string name="no_connections">Aucune connexion enregistrée</string>
-    <string name="title_activity_settings">Settings</string>
-    <string name="btn_edit">Editer</string>
-    <string name="edit_text_joystick_power">Joystick Power</string>
-    <string name="edit_text_joystick_direction">Joystick Direction</string>
-    <string name="fr.millenium_blitz.projectpicars.preferences_file">PreferencesFile</string>
-    <string name="saved_joystick_power">100</string>
-    <string name="saved_joystick_direction">100</string>
+    <string name="edit_text_ip">Adresse IP</string>
     <string name="action_save">Sauvegarder</string>
 
-    <string name="title_activity_info">InfoActivity</string>
-    <string name="dummy_button">Dummy Button</string>
-    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="connect">Connection</string>
+    <string name="test_mode" translatable="false">Test mode</string>
+    <string name="voltage_batterie">Voltage batterie</string>
 
 
 </resources>
